--- a/src/components/Feed/HomeTheFeed.module.scss
+++ b/src/components/Feed/HomeTheFeed.module.scss
@@ -26,6 +26,15 @@
     border-bottom: 1px solid #D8D8D8;
     margin-left: 20px;
   }
+
+  @media only screen and (max-width: 750px) {
+    margin: 10px auto;
+    flex-direction: column;
+
+    .subtitle {
+      margin: 0 20px;
+    }
+  }
 }
 
 .feed {
