--- a/src/components/Header/NewsletterSignup/NewsletterSignupForm.module.scss
+++ b/src/components/Header/NewsletterSignup/NewsletterSignupForm.module.scss
@@ -1,3 +1,5 @@
+$medium_breakpoint: 550px;
+
 .wrapper {
   transition: height 1s cubic-bezier(0, .52, 0, 1);
   height: 0;
@@ -34,6 +36,13 @@
   font-size: 25px;
   font-family: 'Montserrat', sans-serif;
   padding-left: 7px;
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    width: 220px;
+    height: 30px;
+    font-size: 18px;
+    padding-left: 4px;
+  }
 }
 
 .button {
@@ -46,6 +55,12 @@
   border-radius: 7px;
   font-weight: bold;
   font-family: Montserrat, sans-serif;
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    height: 30px;
+    margin-left: 7px;
+    font-size: 18px;
+  }
 }
 
 .thanksMessage {
