--- a/src/components/Search/SearchForm.module.scss
+++ b/src/components/Search/SearchForm.module.scss
@@ -1,3 +1,5 @@
+$medium_breakpoint: 550px;
+
 .formWrapper {
   transition: height 1s cubic-bezier(0, .52, 0, 1);
   display: flex;
@@ -17,6 +19,10 @@
       display: block;
     }
   }
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    margin: 15px auto 0;
+  }
 }
 
 .searchBox {
@@ -27,6 +33,13 @@
   font-size: 25px;
   font-family: 'Montserrat', sans-serif;
   padding-left: 7px;
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    width: 220px;
+    height: 30px;
+    font-size: 18px;
+    padding-left: 4px;
+  }
 }
 
 .button {
@@ -39,4 +52,10 @@
   border-radius: 7px;
   font-weight: bold;
   font-family: Montserrat, sans-serif;
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    height: 30px;
+    margin-left: 7px;
+    font-size: 18px;
+  }
 }
