TP-137 Sets entire card (story, prime, series) clickable.

--- a/src/components/PrimeStories/PrimeStory.module.scss
+++ b/src/components/PrimeStories/PrimeStory.module.scss
@@ -3,6 +3,7 @@
     --aspect-ratio: 3/2;
     background-image: var(--tall-bg-image);
     background-size: cover;
+  text-decoration: none;
 }
 
 .primeStory::before {
