--- a/src/components/PrimeStories/PrimeStoryHero.module.scss
+++ b/src/components/PrimeStories/PrimeStoryHero.module.scss
@@ -7,6 +7,7 @@ $tp_color--primary: #006BFF;
     grid-template-rows: 1fr min-content;
     background-image: var(--wide-bg-image);
     background-size: cover;
+  text-decoration: none;
 
     --aspect-ratio: 2/3;
 
