TP-131 Adds author page, including bio component, refactor of routes, and author name on story clickable.

--- a/src/components/Stories/SingleStoryPage.module.scss
+++ b/src/components/Stories/SingleStoryPage.module.scss
@@ -97,6 +97,11 @@ $small_breakpoint: 650px;
   font-family: 'Montserrat', sans-serif;
   font-size: 0.7rem;
   align-self: end;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .date {
