TP-131 Adds font family and size to author page bio.

--- a/src/components/Authors/AuthorBio.module.scss
+++ b/src/components/Authors/AuthorBio.module.scss
@@ -51,6 +51,8 @@ $tp_color--primary: #006BFF;
   height: 100%;
   align-items: center;
   display: flex;
+  font-family: Montserrat,sans-serif;
+  font-size: 12px;
 }
 
 .spinner {
