--- a/src/components/Authors/AuthorBio.module.scss
+++ b/src/components/Authors/AuthorBio.module.scss
@@ -2,15 +2,16 @@ $tp_color--primary: #006BFF;
 
 .wrapper {
   display: grid;
-  grid-template-columns: min-content 1fr min-content 50%;
-  grid-template-areas: "headshot name social bio";
+  grid-template-columns: min-content max-content 1fr;
+  grid-template-areas: "headshot name bio";
   text-align: left;
   max-width: 1366px;
   margin: 0 auto;
+  background-color: rgba($tp_color--primary, 0.2);
 
   @media only screen and (max-width: 650px) {
-    grid-template-columns: min-content 1fr min-content;
-    grid-template-areas: "headshot name social" "bio bio bio";
+    grid-template-columns: min-content 1fr;
+    grid-template-areas: "headshot name" "bio bio";
   }
 }
 
@@ -33,20 +34,19 @@ $tp_color--primary: #006BFF;
 }
 
 .socialWrapper {
-  grid-area: social;
-  padding: 12px 32px 0 0;
+  grid-area: name;
+  margin: 0 20px 0 8px;
 
   a {
     color: $tp_color--primary;
     font-size: 16px;
-    margin: 0 7px;
+    margin: 0 4px;
   }
 }
 
 .bio {
   grid-area: bio;
-  background-color: rgba($tp_color--primary, 0.2);
-  padding: 20px;
+  padding: 20px 40px 20px;
   align-self: center;
   height: 100%;
   align-items: center;
