--- a/src/components/Feed/TheFeedPage.module.scss
+++ b/src/components/Feed/TheFeedPage.module.scss
@@ -33,3 +33,13 @@
   font-size: 42px;
   color: #006bff;
 }
+
+@media only screen and (max-width: 600px) {
+  .titleWrapper {
+    flex-direction: column;
+  }
+
+  .pageSubtitle {
+    margin: 10px 20px;
+  }
+}
