TP-144 Focuses input field for search and newsletter signup when toggled open in header.

--- a/src/components/Search/SearchButton.module.scss
+++ b/src/components/Search/SearchButton.module.scss
@@ -4,6 +4,7 @@ $medium_breakpoint: 720px;
   font-size: 30px;
   padding: 7px;
   border-radius: 7px;
+  cursor: pointer;
 
   &.visible {
     background-color: gray;
