--- a/src/components/Stories/SingleStoryBio.module.scss
+++ b/src/components/Stories/SingleStoryBio.module.scss
@@ -1,6 +1,7 @@
 // SingleStoryBio.module.scss - Styles for the single story bio component
 
 $tp_color--primary: #006BFF;
+$medium_breakpoint: 800px;
 
 .wrapper {
   display: grid;
@@ -8,6 +9,11 @@ $tp_color--primary: #006BFF;
   grid-template-areas: "headshot name social-icons bio";
   background-color: rgba($tp_color--primary, 0.2);
   padding: 25px;
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    grid-template-columns: min-content max-content 1fr;
+    grid-template-areas: "headshot name social-icons" "bio bio bio";
+  }
 }
 
 .headshot {
@@ -18,6 +24,10 @@ $tp_color--primary: #006BFF;
   border-radius: 50%;
   align-self: center;
   filter: grayscale(100%);
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    margin: 0 20px 0 0;
+  }
 }
 
 .name {
@@ -50,11 +60,18 @@ $tp_color--primary: #006BFF;
   text-align: left;
   height: 100%;
   align-items: center;
-  display: flex;
   font-family: Montserrat,sans-serif;
   font-size: 12px;
 
   a {
     color: inherit;
   }
+
+  @media only screen and (max-width: $medium_breakpoint) {
+    padding: 0;
+  }
+}
+
+.readmore {
+  font-weight: bold;
 }
