--- a/src/components/Editors/Contributors.module.scss
+++ b/src/components/Editors/Contributors.module.scss
@@ -32,5 +32,10 @@
     font-weight: bold;
     list-style-type: none;
     margin: 7px;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
 }
