--- a/src/components/Archive/ArchivePage.module.scss
+++ b/src/components/Archive/ArchivePage.module.scss
@@ -1,11 +1,15 @@
 // ArchivePage.module.scss - Sass file for styling Archive page component
 
+.selections {
+    text-align: left;
+}
+
 @mixin list() {
 
     li {
         display: inline-block;
         padding: 20px;
-        color: blue;
+        color: black;
         cursor: pointer;
 
         &.selected {
@@ -22,4 +26,17 @@
 
 .month_list {
     @include list();
+}
+
+.storyList {
+    max-width: 900px;
+    margin: 0 auto;
+}
+.storyTitle {
+    text-align: left;
+    text-transform: uppercase;
+    
+    a {
+        color: inherit;
+    }
 }
