TP-188 Adds dynamic heading to Archive page

--- a/src/components/Archive/ArchivePage.module.scss
+++ b/src/components/Archive/ArchivePage.module.scss
@@ -2,6 +2,12 @@
 
 .selections {
     text-align: left;
+    font-family: Montserrat,sans-serif;
+}
+
+.heading {
+    text-align: center;
+    text-transform: uppercase;
 }
 
 @mixin list() {
