--- a/src/components/Archive/ArchivePage.module.scss
+++ b/src/components/Archive/ArchivePage.module.scss
@@ -14,13 +14,14 @@
 
     li {
         display: inline-block;
+        font-size: 14px;
         padding: 20px;
         color: black;
         cursor: pointer;
 
         &.selected {
             font-weight: bold;
-            font-size: 14px;
+            font-size: 17px;
             text-transform: uppercase;
         }
     }
@@ -37,10 +38,12 @@
 .storyList {
     max-width: 900px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 .storyTitle {
     text-align: left;
     text-transform: uppercase;
+    font-size: 12px;
     
     a {
         color: inherit;
