--- a/src/components/Archive/ArchivePage.module.scss
+++ b/src/components/Archive/ArchivePage.module.scss
@@ -5,7 +5,12 @@
     font-family: Montserrat,sans-serif;
 }
 
-.heading {
+.pagetitle {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.monthheading {
     text-align: center;
     text-transform: uppercase;
 }
@@ -15,7 +20,7 @@
     li {
         display: inline-block;
         font-size: 14px;
-        padding: 20px;
+        padding: 5px 12px;
         color: black;
         cursor: pointer;
 
