TP-212 Adds categories to hamburger navigation

--- a/src/components/Navigation/HamburgerMenu.module.scss
+++ b/src/components/Navigation/HamburgerMenu.module.scss
@@ -40,3 +40,15 @@
     font-weight: bold;
   }
 }
+
+.subnavigation {
+  
+  li {
+      text-align: left;
+      margin: 0 0 7px 15px;
+
+    a {
+      font-size: 12px;
+    }
+  }
+}
