TP-220 Makes prime story images responsive and adds webp variant

--- a/src/components/Stories/StoryMasonryTile.module.scss
+++ b/src/components/Stories/StoryMasonryTile.module.scss
@@ -18,15 +18,13 @@ $seriesPrimaryColor: #F8AE0F;
   word-break: break-all;
   /* Instead use this non-standard one: */
   word-break: break-word;
+}
 
-  &::before {
-    height: 0;
-    content: "";
-    display: inline-block;
-    padding-bottom: calc( 100% * 3/2 );
-    grid-area: 1/1/-1/-1;
-    background-color: rgba( black, 0.3 );
-    justify-self: stretch;
+.backgroundImage {
+  grid-area: 1/1/-1/-1;
+
+  img {
+  width: 100%;
   }
 }
 
