--- a/src/components/Stories/StoryMasonryTile.module.scss
+++ b/src/components/Stories/StoryMasonryTile.module.scss
@@ -24,8 +24,8 @@ $seriesPrimaryColor: #F8AE0F;
   grid-area: 1/1/-1/-1;
 
   img {
+    display: block;
     width: 100%;
-    height: 100%;
   }
 }
 
