--- a/src/components/BTS/HomeBTS.module.scss
+++ b/src/components/BTS/HomeBTS.module.scss
@@ -1,12 +1,68 @@
+$tp_primary: #006BFF;
+
 .wrapper {
   display: grid;
   grid-template-rows: 200px 1fr 50px;
   background-size: cover;
 }
 
+.headerWrapper {
+  display: grid;
+  grid-template-columns: 1fr min-content min-content;
+  grid-gap: 6px;
+  padding: 25px 0 25px 25px;
+  align-items: center;
+
+  .headerBranding {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    .headerTitle {
+      text-transform: uppercase;
+      font-size: 26px;
+      text-align: left;
+      margin: 0;
+
+      .titleTrademark {
+        font-size: 55%;
+        line-height: 1;
+        vertical-align: top;
+        font-weight: 600;
+      }
+    }
+
+    .headerSubtitle {
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      padding: 7px 0;
+      text-transform: uppercase;
+      align-self: left;
+    }
+  }
+
+  .headerFrequency {
+    color: $tp_primary;
+    text-transform: uppercase;
+    text-align: right;
+    font-weight: bold;
+    font-size: 8px;
+
+    .frequencyDate {
+      font-size: 20px;
+    }
+  }
+
+  .headerHeadshot {
+    max-width: 100px;
+    border-left: 3px solid $tp_primary;
+  }
+}
+
 .contentWrapper {
   grid-area: 2/1/3/2;
-  color: #006BFF;
+  color: $tp_primary;
   text-align: left;
   margin: 0 30px;
   filter: none;
