--- a/src/components/Header/NewsletterSignup/NewsletterSignupForm.module.scss
+++ b/src/components/Header/NewsletterSignup/NewsletterSignupForm.module.scss
@@ -8,9 +8,17 @@ $tp_blue: #006BFF;
   grid-template-areas: "daily weekly" "email_form email_form" "privacy_policy privacy_policy";
   grid-gap: 20px;
   background-color: #ebebeb;
-  padding: 25px;
+  padding: 0 25px;
   max-width: 764px;
   margin: 0 auto;
+  overflow: hidden;
+  transition: height 1.0s, padding 1.0s;
+
+  &.open {
+    //max-height: 489px;
+    padding: 25px;
+    transition: height 1.0s, padding 1.0s;
+  }
 
   @media only screen and (max-width: 550px) {
     grid-template-columns: 1fr;
