--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,6 +11,7 @@ $large_breakpoint: 980px;
     "search-form search-form search-form search-form search-form"
     "subscribe-form subscribe-form subscribe-form subscribe-form subscribe-form";
   padding: 40px 130px 24px;
+  background-color: red;
 
   @media only screen and (max-width: $medium_breakpoint) {
     padding: 40px 5px 14px;
